<resources>
    <string name="app_name">IbeorChattingApp</string>
    <string name="createAccount">Create Account</string>
    <string name="signIn">Sign in</string>
    <string name="signInWith">Sign in with</string>
    <string name="welcomeTerms">By tapping create account or Sign in, you agree to our\n<u>Terms</u>. Learn how we Process your data on our\n<u>Privacy Policy</u> and <u>Cookies Policy</u></string>
    <string name="welcomeHelpText">Trouble Signing In?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook">Facebook</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="apple">Apple</string>
    <string name="accountRecovery">Account Recovery</string>
    <string name="cngNumber">Change your Phone Number?</string>
    <string name="troubleLayoutLineOne">We can help you login with email address.</string>
    <string name="signInWithEmail">Sign in with email</string>
    <string name="signinbyemail">Signin by email</string>
    <string name="signInByEmailLineOne">We\'ll email you a link that will instantly log you in.</string>
    <string name="your_email">Your Email</string>
    <string name="email_address">Email Address</string>
    <string name="resend_email">Resend email</string>
    <string name="send_email">Send Email</string>
    <string name="signByMailSuccessMsg">If we found an account with\ntheibeor@gmail.com, an email has been\nsent. Please check your email in a movement.</string>
    <string name="my_phone_number_is">My phone number is</string>
    <string name="signInLineOne">We protect our community by making sure\neveryone on iBeor is real. We will never share\nyour phone number with anyone.</string>
    <string name="message_and_data_rates_may_apply">Message and data rates may apply.</string>
    <string name="phone_number">Phone Number</string>
    <string name="continuee">Continue</string>
    <string name="dialogInvalidMsgOne">The number you have enterd is\ninvalid. Please enter a valid\nphone number.</string>
    <string name="dialogBanNumber">Your iBeor Account has been\nbanned for activity that\nviolates our Terms of Use.</string>
    <string name="enter_your_code">Enter your code</string>
    <string name="signOtpLineOne">We have sent you one time password\nplease check</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend">Resend</string>
    <string name="what_s_your_email">What’s your email?</string>
    <string name="tvLineOne">Don’t lose access to your account\nverify your email.</string>
    <string name="enter_your_first_name">Enter your First Name</string>
    <string name="tvNameLineONe">This is how your name will appear in iBeor</string>
    <string name="your_name">Your Name</string>
    <string name="name">Name</string>
    <string name="allow_location">Allow Location</string>
    <string name="tvLocationLineOne">We use your location to show you potential\nmatches in your area.</string>
    <string name="enable_location">Enable Location</string>
    <string name="notnow">NotNow</string>
    <string name="complete">COMPLETE</string>
    <string name="google">Google</string>
    <string name="i_am_a">I am a</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="dob">What’s your date of Birth?</string>
    <string name="tvDobLineOne">This can’t be changed later</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="dob_dialog_text">Please confirm your info</string>
    <string name="confirm">Confirm</string>
    <string name="dob_dob">Born Jan 1, 1991</string>
    <string name="select_your_country">Select your Country</string>
    <string name="contry_second">Be Proud of your Country</string>
    <string name="select_up_to_2_roots">Select up to 2 roots</string>
    <string name="roots">Roots</string>
    <string name="add_photos">Add Photos</string>
    <string name="add_two">Add at least 2 photos to continue</string>
    <string name="check_your_email">Check your email!</string>
    <string name="delete">DELETE</string>
    <string name="in_oder_to_register_you_must_be_nat_least_18_year_old">In oder to register you must be\nat least 18 year old</string>
    <string name="welcome_to_ibeor">Welcome to iBeor</string>
    <string name="txt_sub_title_singned">Please follow these House Rules.</string>
    <string name="test_one">Be yourself</string>
    <string name="test_one_sub">Make sure your photos, age, and bio are true to who you are.</string>
    <string name="yaaay_you_made_it">Yaaay you Made It</string>
    <string name="start_matching_with_singles_near_you">Start matching with singles near you</string>
    <string name="there_s_no_one_around_you_expand_your_discovery_settings_to_see_more_people">There’s no one around you. Expand your discovery settings to see more people.</string>
    <string name="your_boost_is_active">Your boost is active</string>
    <string name="until">Until</string>
    <string name="get_more_boosts_now">Get more boosts now</string>
    <string name="ok">OK</string>
    <string name="nigeria">Nigeria</string>
    <string name="daman_dhiman">Daman Dhiman\'s Profile</string>
    <string name="current_work">Current Work</string>
    <string name="school">School</string>
    <string name="self">"I'm going to make myself a sandwich and get back to work.\nI amaze myself with my cleverness.\nThanks, but I did all this by myself until you came along.\nI've told myself that a hundred times."</string>
    <string name="dating_preferences">Dating Preferences</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="i_m_interested_in">I’m interested in...</string>
    <string name="age">Age</string>
    <string name="_18_20">18-20</string>
    <string name="only_people_in_this_range_will_be_shown">Only people in this range will be shown</string>
    <string name="location_current">Current Location</string>
    <string name="distance_preference">Distance Preference</string>
    <string name="_9mi">9mi</string>
    <string name="distance_txt">Only people in this range will be shown</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="safety">Safety</string>
    <string name="_0_super_likes">0 Super Likes</string>
    <string name="get_more">GET MORE</string>
    <string name="_0_boosts">0 Boosts</string>
    <string name="get_super_likes">GET SUPER LIKES</string>
    <string name="invite">Invite Friends To iBeor</string>
    <string name="account_settings">ACCOUNT SETTINGS</string>
    <string name="login_methods">Login Methods</string>
    <string name="email">Email</string>
    <string name="temp_email">damanDhiman1234@gmail.com</string>
    <string name="a_verified_phone_number_and_email_help_secure_your_account">A verified Phone Number and Email help secure your account</string>
    <string name="notifications">Notifications</string>
    <string name="push_notification">Push Notification</string>
    <string name="ads">Ads</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="temp_guidline">Community Guidelines</string>
    <string name="safety_tips">Safety Tips</string>
    <string name="cookie_policy">Cookie Policy</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="btn_delete_account">Delete My Account</string>
    <string name="version">Version 1.0.0</string>
    <string name="update_phone_number">Update Phone Number</string>
    <string name="current_phone_number">Current Phone Number</string>
    <string name="protect_your_account_and_never_lose_access_by_adding_more_login_methods">Protect your account and never lose access by adding more login methods</string>
    <string name="login_text_temp">Protect your account and never lose access\nby adding more login methods</string>
    <string name="current_login_method">Current Login Method</string>
    <string name="other_login_method">Other Login Method</string>
    <string name="fb_name">Facebook</string>
    <string name="note_you_will_still_receive_notifications_that_are_necessary_to_operate_this_app">Note: You will still receive notifications that are\nnecessary to operate this App</string>
    <string name="about_data_one">If one or more of your selections is the same as another potential match, we’ll automatically show it to them. If not, you can choose to show your desired selection(s) by turning this button on.</string>
    <string name="height_temp">What is your height?</string>
    <string name="language_temp">We\'ll show these on you profile and\nuser them to connect you with great\nmatches who know your languages.</string>


</resources>