<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f7ff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.troubleSigning.signInByEmail.SiginnByEmailFragment">
    <ImageView
        android:id="@+id/backBtnByEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_toolbar"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitleOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signinbyemail"
        android:textSize="18sp"
        android:textStyle="bold"
        style="@style/troubleLayoutStyleTwo"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtLineOneByEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signInByEmailLineOne"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/txtEmailShow"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/your_email"
        android:textSize="12sp"
    android:layout_marginTop="30dp"
    app:layout_constraintTop_toBottomOf="@+id/txtLineOneByEmail"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="18dp"
    />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEnterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:layout_marginStart="18sp"
        android:layout_marginEnd="18sp"
        android:layout_marginTop="10dp"
        android:drawablePadding="20dp"
        android:paddingStart="20dp"
        android:padding="15dp"
        android:elevation="10dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/email_et_round"
        android:drawableStart="@drawable/ic_mail"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailShow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/txtEmailSendAgain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="12sp"
    android:text="@string/resend_email"
    android:layout_marginTop="10dp"
    android:fontFamily="@font/gotham_rounded"
    app:layout_constraintTop_toBottomOf="@+id/etEnterEmail"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="18sp"
    />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        android:textColor="@color/white"
        android:fontFamily="@font/gotham_rounded"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginTop="40dp"
        style="@style/welcomeStyleBtn"
        android:background="@drawable/sign_with_email_btn_round"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailSendAgain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>