<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f7ff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.registerMail.RegisterNameFragment">

    <ImageView
        android:id="@+id/imBackBtnRegisterNameN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_toolbar"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_first_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        style="@style/signInStyleOne"
        app:layout_constraintTop_toBottomOf="@+id/imBackBtnRegisterNameN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNameLineOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNameLineONe"
        android:gravity="center_horizontal"
        style="@style/signInStyleOne"
        app:layout_constraintTop_toBottomOf="@+id/tvNameTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNameLineTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:layout_marginTop="30dp"
        style="@style/signRegisterMail"
        app:layout_constraintTop_toBottomOf="@+id/tvNameLineOne"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatEditText
    android:id="@+id/etEnterName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/name"
    android:padding="15dp"
    android:drawableStart="@drawable/ic_img_name"
    android:drawablePadding="20dp"
    android:background="@drawable/et_phone_number_enter_round"
    style="@style/signRegisterMail"
    android:elevation="2dp"
    android:textSize="14sp"
    android:inputType="textCapSentences|textPersonName"
    app:layout_constraintTop_toBottomOf="@+id/tvNameLineTwo"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegisterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        style="@style/signInStyleOne"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:padding="20dp"
        android:text="@string/continuee"
        android:background="@drawable/sign_with_email_btn_round"
        app:layout_constraintTop_toBottomOf="@+id/etEnterName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>