<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f7ff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.troubleSigning.TroubleSigningWelcomeFragment">
    <ImageView
        android:id="@+id/backBtnTrouble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_toolbar"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitleT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountRecovery"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="270dp"
        style="@style/troubleLayoutStyleOne"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtChangePhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cngNumber"
        style="@style/troubleLayoutStyleOne"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleT"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtLineOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/troubleLayoutLineOne"
        style="@style/troubleLayoutStyleOne"
        app:layout_constraintTop_toBottomOf="@+id/txtChangePhoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInWithEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/signInWithEmail"
        style="@style/welcomeStyleBtn"
        android:fontFamily="@font/gotham_rounded"
        android:background="@drawable/sign_with_email_btn_round"
        app:layout_constraintTop_toBottomOf="@+id/txtLineOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>