<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.filterSetting.FilterSettingFragment">
<include layout="@layout/toolbar_filter_setting"
    android:id="@+id/filterInculdeToolbar"
    />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtInterestingTempFS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_m_interested_in"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:textSize="14sp"
        android:textStyle="normal"
        style="@style/userInforStyle"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="18sp"
        android:layout_marginEnd="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtInterestingTempFS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMenFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/men"
            android:padding="16sp"
            android:background="@drawable/fillter_btn_round"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnWomenFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16sp"
            android:text="@string/women"
            android:background="@drawable/fillter_btn_round_two"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="18sp"
        android:layout_marginEnd="18sp"
        android:layout_marginTop="20dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/gotham_rounded"
            android:layout_marginStart="10dp"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtFilterAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_18_20"
            android:gravity="end"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/gotham_rounded"
            android:layout_marginEnd="10dp"
            />
    </LinearLayout>
    <com.google.android.material.slider.RangeSlider
        android:id="@+id/ageRangeSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="18"
        android:valueTo="100"
        app:labelBehavior="gone"
        android:elevation="1dp"
        app:trackColorActive="#cc49d5"
        app:trackColorInactive="#cccccc"
        app:thumbColor="#cc49d5"
        app:thumbStrokeColor="@color/white"
        app:thumbRadius="10dp"
        app:thumbStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discreteSlider"
        app:values="@array/slider_values" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="18sp"
        android:layout_marginEnd="18sp"
        >
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:text="@string/only_people_in_this_range_will_be_shown"
        />
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchForAge"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_weight="1"
        app:thumbTint="@color/white"
        app:trackTint="#00b294"
        android:layout_gravity="center_vertical"
        android:checked="true"
        android:gravity="end"
         />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="18sp"
        android:layout_marginEnd="18sp"
        android:layout_marginTop="30dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_current"
            android:fontFamily="@font/gotham_rounded"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtUserLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_current"
            android:fontFamily="@font/gotham_rounded"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:textColor="@color/black"
            android:layout_weight="1"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="18sp"
        android:layout_marginEnd="18sp"
        android:layout_marginTop="30dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_preference"
            android:fontFamily="@font/gotham_rounded"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtDistanceFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9mi"
            android:fontFamily="@font/gotham_rounded"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:textColor="@color/black"
            android:layout_weight="1"
            />
    </LinearLayout>
    <com.google.android.material.slider.Slider
        android:id="@+id/distanceSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18sp"
        android:layout_marginEnd="18sp"
        android:valueFrom="0"
        android:valueTo="100"
        app:labelBehavior="gone"
        android:elevation="1dp"
        app:trackColorActive="#cc49d5"
        app:trackColorInactive="#cccccc"
        app:thumbColor="#cc49d5"
        app:thumbStrokeColor="@color/white"
        app:thumbRadius="10dp"
        app:thumbStrokeWidth="1dp"
        android:value="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="18sp"
        android:layout_marginEnd="18sp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_txt"
            android:textSize="11sp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/gotham_rounded"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchForDistance"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1"
            app:thumbTint="@color/white"
            app:trackTint="#00b294"
            android:layout_gravity="center_vertical"
            android:checked="true"
            android:gravity="end"
            />
    </LinearLayout>

</LinearLayout>