<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.welcome.WelcomeFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:layout_marginTop="190dp"
        style="@style/welcomeStyleBtn"
        android:textAllCaps="false"
        android:fontFamily="@font/gotham_rounded"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_create_account_btn"
      app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:layout_marginBottom="20dp"
        style="@style/welcomeStyleBtn"
        android:textAllCaps="false"
        android:fontFamily="@font/gotham_rounded"
        android:background="@drawable/round_sign_in_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txtTerms"
        />
    <TextView
        android:id="@+id/txtTerms"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/welcomeTerms"
        android:textSize="12dp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        style="@style/welcomeStyle"
        android:padding="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/gotham_rounded"
        app:layout_constraintBottom_toTopOf="@+id/T"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/T"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeHelpText"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="#e94057"
        android:fontFamily="@font/gotham_rounded"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>