<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.signInWelcome.SigninFinishedFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogoWelcomeFinised"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitleWelcomeFinised"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yaaay_you_made_it"
        style="@style/forTitle"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoWelcomeFinised"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSubtitleWelcomeFinised"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_matching_with_singles_near_you"
        style="@style/forTitle"
        android:textSize="14sp"
        android:textColor="#4a4b4d"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleWelcomeFinised"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btnWelcomeFinished"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="65dp"
    android:layout_marginEnd="65dp"
    android:padding="22dp"
    style="@style/signInStyleOne"
    android:layout_marginTop="40dp"
    android:textColor="@color/white"
    android:textAllCaps="false"
    android:text="@string/continuee"
    android:background="@drawable/sign_with_email_btn_round"
    app:layout_constraintTop_toBottomOf="@+id/txtSubtitleWelcomeFinised"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>